# e_stop_manager

e_stop_manager/: CMakeLists.txt
e_stop_propagators/: CMakeLists.txt  e_stop_propagator_plugins.xml  package.xml  readme.md
e_stop_propagators/include/e_stop_propagators/: flex_nav_propagator.hpp  nav_propagator.hpp  propagator_base.hpp
e_stop_propagators/src/: flex_nav_propagator.cpp  nav_propagator.cpp
e_stop_server/: CMakeLists.txt  package.xml
e_stop_server/config/: asterix_e_stops.yaml
e_stop_server/include/e_stop_server/: e_stop_manager.h
e_stop_server/launch/: asterix_e_stop_manager.launch  telemax_e_stop_manager.launch
e_stop_server/src/: e_stop_manager.cpp  e_stop_manager_node.cpp
