<?xml version="1.0"?>
<package format="2">
    <name>e_stop_propagators</name>
    <version>0.0.1</version>
    <description>e_stop_propagators package with e-stop propagation actions as plugins</description>

    <author email="michael.pritchard@csiro.au">Michael Pritchard</author>
    <maintainer email="michael.pritchard@csiro.au">Michael Pritchard</maintainer>

    <license>not defined</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>pluginlib</depend>
    <depend>actionlib</depend>
    <depend>move_base_msgs</depend>
    <depend>mbf_msgs</depend>
    <depend>mission_msgs</depend>
    <depend>record_msgs</depend>

    <export>
        <e_stop_propagators plugin="${prefix}/e_stop_propagator_plugins.xml"/>
    </export>

</package>
